# rohit-physicsnemo

./: README.md
rohit-physicsnemo-api/: main.py  pyproject.toml  requirements.txt  run.sh
rohit-physicsnemo-app/: package-lock.json  package.json
